--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-.gradle
-.idea
-gradle
-build
-local.properties
+# IDEA
 *.iml
-gradlew.bat
-gradlew
-publish
-publish.bat
+/.idea
+
+# Gradle
+.gradle
+build
+
+# Gradle Android
+/local.properties
+/gradlew.bat
+/gradlew
+/publish
+/publish.bat
