--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,14 +17,14 @@
 apply plugin : 'com.android.library'
 
 android {
-  compileSdkVersion Ver.compilesdk
-  buildToolsVersion Ver.buildtools
+  compileSdkVersion androids.compileSdk
+  buildToolsVersion androids.buildTools
 
   defaultConfig {
-    minSdkVersion Ver.minsdk
-    targetSdkVersion Ver.compilesdk
-    versionCode toVersionCode(Ver.lib)
-    versionName Ver.lib
+    minSdkVersion androids.minSdk
+    targetSdkVersion androids.compileSdk
+    versionCode androids.versionCode
+    versionName version
   }
 
   buildTypes {
@@ -43,8 +43,10 @@ android {
 dependencies {
   api project(':annotations')
 
-  implementation Dep.Dagger.android
-  annotationProcessor Dep.Dagger.Annotation.compiler
+  implementation dependencys.daggers.android
+  annotationProcessor dependencys.daggers.annotations.compiler
 }
 
-apply from : rootProject.file("publish.gradle")
+apply from : rootProject.file("gradle/android-tasks.gradle")
+apply from : rootProject.file("gradle/bintray-config.gradle")
+apply from : rootProject.file("gradle/maven-install.gradle")
