--- a/gradle/maven-install.gradle
+++ b/gradle/maven-install.gradle
@@ -16,38 +16,34 @@
 
 apply plugin : 'com.github.dcendents.android-maven'
 
-install {
-  repositories.mavenInstaller {
-    pom {
-      project {
-        packaging 'aar'
-        groupId Rep.group
-        artifactId this.name
-        name this.name
-        description "${Rep.url}s' ${this.name} library"
-        url "${Rep.url}/tree/master/${this.name}"
+install.repositories.mavenInstaller {
+  pom.project {
+    packaging 'aar'
+    groupId this.group
+    artifactId this.name
+    name this.name
+    description repository.description
+    url repository.packageUrl
 
-        licenses {
-          license {
-            name Rep.name
-            url "${Rep.url}/blob/master/LICENSE.txt"
-          }
-        }
-
-        developers {
-          developer {
-            id Dev.name
-            name Dev.name
-            email Dev.email
-          }
-        }
-
-        scm {
-          connection Rep.git
-          developerConnection Rep.git
-          url "${Rep.url}/tree/master/${this.name}"
-        }
+    licenses {
+      license {
+        name repository.licenses.join(", ")
+        url "${repository.url}/blob/master/LICENSE.txt"
       }
+    }
+
+    developers {
+      developer {
+        id developer.name
+        name developer.name
+        email developer.email
+      }
+    }
+
+    scm {
+      connection "scm:git:${repository.url}.git"
+      developerConnection "scm:git:${repository.url}.git"
+      url repository.packageUrl
     }
   }
 }
