--- a/gradle/maven-install.gradle
+++ b/gradle/maven-install.gradle
@@ -16,6 +16,8 @@
 
 apply plugin : 'com.github.dcendents.android-maven'
 
+group = rep.id
+
 install.repositories.mavenInstaller {
   pom.project {
     packaging 'aar'
