--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,35 @@
  */
 
 apply plugin : 'com.android.application'
-apply from : rootProject.file("gradle/module-config.gradle")
+
+android {
+  compileSdkVersion rep.sdk.compile
+  buildToolsVersion rep.sdk.tools
+
+  defaultConfig {
+    minSdkVersion rep.sdk.min
+    targetSdkVersion rep.sdk.compile
+    versionCode rep.version.code
+    versionName rep.version.name
+
+    applicationId rep.id
+
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  }
+
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    }
+  }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+}
+
 
 dependencies {
   implementation fileTree(dir : 'libs', include : ['*.jar'])
