--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,4 @@ task clean(type : Delete) {
   delete rootProject.buildDir
 }
 
-apply from : rootProject.file("gradle/project-config.gradle")
+apply from : "/gradle/project-config.gradle"
