--- a/gradle/project-config.gradle
+++ b/gradle/project-config.gradle
@@ -65,9 +65,9 @@ ext {
   ]
 
   rep.sdk = [
-      compile : 'android-P',
+      compile : 27,
       min     : 17,
-      tools   : '28.0.0 rc1'
+      tools   : '27.0.3'
   ]
 
 
@@ -77,7 +77,7 @@ ext {
 
   def support = [
       group   : "com.android.support",
-      version : "28.0.0-alpha1"
+      version : "27.1.0"
   ]
   dep.support = [
       appcompat : "$support.group:appcompat-v7:$support.version",
